# polyq

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
make/: poly-queue.sln
make/build.props/: config.props  config.tests.props
poly-queue/: circular.h  entry.h  fifo.h  queue.h
polyq/: circular.h  entry.h  queue.h  static_entry.h
tests/: CMakeLists.txt  CircularBufferTests.cpp  FifoTests.cpp  PolyEntryTests.cpp  QueueTests.cpp  StaticEntryTests.cpp  helpers.h  poly-queue.tests.vcxproj  poly-queue.tests.vcxproj.filters
